# lumi-mvp

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  MASTER_PLAN.md  Makefile  README.md  STATUS.md  YOHAS_3_IMPLEMENTATION_PLAN.md  docker-compose.benchmark.yml  docker-compose.mcp.yml  docker-compose.prod.yml  docker-compose.serve.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agents/: __init__.py  base.py  clinical_analyst.py  drug_hunter.py  experiment_designer.py  factory.py  genomics_mapper.py  literature_analyst.py  pathway_analyst.py  protein_engineer.py  scientific_critic.py  templates.py  tool_creator.py  tool_retriever.py
backend/alembic/: env.py
backend/api/: __init__.py  deps.py  main.py  middleware.py  websocket.py
backend/benchmarks/: __init__.py  __main__.py  adapters.py  evaluator.py  models.py  report.py  runner.py  strategy_memory.py  trajectory_store.py
backend/core/: __init__.py  audit.py  config.py  constants.py  exceptions.py  interfaces.py  llm.py  models.py  tool_registry.py
backend/data/: strategy_templates.json
backend/db/: __init__.py  persistence.py  session.py  tables.py
backend/integrations/: __init__.py  base_tool.py  biogrid.py  biosecurity.py  cellxgene.py  chembl.py  clinicaltrials.py  clinvar.py  container_tool.py  data_lake.py  depmap.py  esm.py  gnomad.py  gtex.py  hpo.py  kegg.py  living_document.py  mcp_client.py  mcp_server_manager.py  mcp_tool_retriever.py  mygene.py  omim.py  opentargets.py  pubmed.py  python_repl.py  reactome.py  registry.py  semantic_scholar.py  slack.py  (+4 more)
(+625 files in other folders)
